--- a/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
+++ b/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
@@ -2,6 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Serilog.LogglyBulkSink</id>
+	<version>$version$</version>
+	<description>A high throughput Loggly sink for Serilog that utilizes the bulk HTTP endpoint.</description>
     <authors>Samir Ahmed and Contributors</authors>
   </metadata>
 </package>
