--- a/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
+++ b/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>Serilog.LogglyBulk</id>
-	<version>$version$</version>
+    <id>Serilog.LogglyBulkSink</id>
+	<version>$version$-prerelease</version>
 	<description>A high throughput Loggly sink for Serilog that utilizes the bulk HTTP endpoint.</description>
     <authors>Samir Ahmed and Contributors</authors>
   </metadata>
