Sink now properly logs shipping failures
Sink now properly throws, and catches, exceptions resulting from pushing
to loggly.  Also changed the package feed back to Serilog.LogglyBulk for
the time being until I have permissions.

--- a/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
+++ b/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>Serilog.LogglyBulkSink</id>
+    <id>Serilog.LogglyBulk</id>
 	<version>$version$-prerelease</version>
 	<description>A high throughput Loggly sink for Serilog that utilizes the bulk HTTP endpoint.</description>
     <authors>Samir Ahmed and Contributors</authors>
