--- a/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
+++ b/Serilog.LogglyBulkSink/Serilog.LogglyBulkSink.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Serilog.LogglyBulk</id>
-	<version>$version$-prerelease</version>
+	<version>$version$</version>
 	<description>A high throughput Loggly sink for Serilog that utilizes the bulk HTTP endpoint.</description>
     <authors>Samir Ahmed and Contributors</authors>
   </metadata>
